# jotter

./: .gitignore  README.md  TODO.md  io.github.erikkarlberg.jotter.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: io.github.erikkarlberg.jotter.desktop  io.github.erikkarlberg.jotter.metainfo.xml
debian/: build.sh  control
jotter/: __init__.py  audit_log.py  auth.py  backup.py  editor.py  export.py  imap_backend.py  main.py  models.py  utils.py  window.py
jotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: add_example_notes.py
tests/: apple_notes_interop_test.py  test_models.py  test_utils.py
